# DAT_changer

./: .gitignore  README.md  main.py  pyproject.toml
src/: __init__.py  file_browser.py  file_parser.py  py_extension_build.py
src/cfiles/: _c_formulas.c  _c_formulas.cp311-win_amd64.pyd
src/cfiles/c_src/: c_formulas.c  c_formulas.h
test/: test_main.py  test_parse_file.py
