[tool.poetry]
name = "boilerplate-project"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"
packages = [{include = "boilerplate_project"}]

[tool.poetry.dependencies]
python = "^3.11"
cffi = "^1.15.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.1"
pytest = "^7.2.1"
black = "^23.1.0"
types-cffi = "^1.15.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
